RESOLVED FIXED 39942
[DRT/Chromium] Fix crash of a test after another test with multiple windows
https://bugs.webkit.org/show_bug.cgi?id=39942
Summary [DRT/Chromium] Fix crash of a test after another test with multiple windows
Kent Tamura
Reported 2010-05-31 00:50:43 PDT
[DRT/Chromium] Fix crash of a test after another test with multiple windows
Attachments
Patch (1.38 KB, patch)
2010-05-31 00:56 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2010-05-31 00:56:43 PDT
Dimitri Glazkov (Google)
Comment 2 2010-05-31 08:25:37 PDT
Comment on attachment 57437 [details] Patch ok.
Kent Tamura
Comment 3 2010-05-31 17:42:41 PDT
Comment on attachment 57437 [details] Patch Clearing flags on attachment: 57437 Committed r60455: <http://trac.webkit.org/changeset/60455>
Kent Tamura
Comment 4 2010-05-31 17:42:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.