2010-05-31  Kent Tamura  <tkent@chromium.org>

Reviewed by Dimitri Glazkov.

        [DRT/Chromium] Fix crash of a test after another test with multiple windows
        https://bugs.webkit.org/show_bug.cgi?id=39942

        If a test opens multiple windows, focuses on non-main window, and
        the focused window is closed, TestShell::m_focusedWidget points a
        deleted object.

        * DumpRenderTree/chromium/TestShell.cpp:
        (TestShell::closeWindow): Clear m_focusedWidget.

Canonical link: https://commits.webkit.org/51494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60455 268f45cc-cd09-0410-ab3c-d52691b4dbfc